macros/tests/ui/declare/ctx_only_allow_in_init_fail.stderr
error: `ctx` only allow use in `init` phase
  --> tests/ui/declare/ctx_only_allow_in_init_fail.rs:14:48
   |
14 |       size: ZERO_SIZE, background: Palette::of(ctx).primary()
   |                                                ^^^
